# bazel_ipfs

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  archive.bzl  index.bzl  pin.bzl  save-commands.json  tools_repo.bzl  versions.bzl
.github/workflows/: main.yml  release.yml
fetch_versions/: BUILD.bazel  main.py
hello_bazel/: BUILD.bazel  WORKSPACE
test_repository/: BUILD.bazel
usage_test/: WORKSPACE
